--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,7 @@
 *{
   margin: 0px;
   padding: 0px;
-  text-align: left;
+  text-align: center;
 }
 
 .navBar {
@@ -21,7 +21,8 @@
   border:1px solid white;
   border-radius: 10px;
   cursor: pointer;
-  box-shadow: 0 0 15px rgb(13,110,253);
+  padding-top: 60%;
+    box-shadow: 0 0 15px rgb(13,110,253);
 }
 
 .eventTileImage {
@@ -57,12 +58,18 @@
   margin: 10px;
 }
 
-input {
-  width: 75%
+input, textarea {
+  width: 75%;
+  margin: 10px auto;
+  text-align: left;
+  padding: 10px
 }
+
 label{
   width:25%;
-  text-align:left;
+  text-align:right;
+  vertical-align: top;
+  padding: 10px;
 }
 
 h2 {
@@ -87,4 +94,9 @@ button {
 h3 {
   color:white;
   padding: 20px
+}
+
+p {
+  width: 60%;
+  display: inline-block
 }
